@@ -1,4 +1,4 @@
-.\"	$NetBSD: battlestar.6,v 1.7 1999/07/28 01:45:41 hubertf Exp $
+.\"	$NetBSD: battlestar.6,v 1.8 2000/09/08 17:18:36 jsm Exp $
 .\"
 .\" Copyright (c) 1983, 1993
 .\"	The Regents of the University of California.  All rights reserved.
